src/quack.output
Terminals which are not used

   DIBUJA


Grammar

    0 $accept: program $end

    1 @1: /* empty */

    2 @2: /* empty */

    3 @3: /* empty */

    4 program: PROGRAMA ID @1 LBR vars funciones @2 @3 bloque RBR

    5 @4: /* empty */

    6 vars: VAR vars2 tipo @4 SEM vars
    7     | /* empty */

    8 @5: /* empty */

    9 vars2: ID @5 vars3

   10 vars3: LSQ CTE_NUM RSQ vars3
   11      | COM vars2
   12      | /* empty */

   13 tipo: NUM
   14     | TEXTO
   15     | BOOL
   16     | LIBRE

   17 bloque: estatutos bloque
   18       | ciclos bloque
   19       | dibuja bloque
   20       | /* empty */

   21 estatutos: condicion
   22          | asig_llamada
   23          | escritura

   24 @6: /* empty */

   25 asig_llamada: ID @6 llamada_

   26 llamada_: asignacion
   27         | llamada SEM

   28 @7: /* empty */

   29 llamada: LPA @7 varsss RPA

   30 @8: /* empty */

   31 varsss: sexp @8 varsss2

   32 varsss2: COM varsss
   33        | LSQ CTE_NUM RSQ varsss2
   34        | /* empty */

   35 @9: /* empty */

   36 @10: /* empty */

   37 @11: /* empty */

   38 @12: /* empty */

   39 funciones: tipo @9 FUNCION ID @10 LPA @11 varss RPA LBR vars bloque funciones1 RBR @12 funciones
   40          | /* empty */

   41 funciones1: REGRESA sexp SEM
   42           | /* empty */

   43 varss: varss2
   44      | /* empty */

   45 @13: /* empty */

   46 @14: /* empty */

   47 varss2: tipo @13 ID @14 varss3

   48 varss3: COM varss2
   49       | LSQ CTE_NUM RSQ varss3
   50       | /* empty */

   51 @15: /* empty */

   52 asignacion: EQU @15 asignacion1 SEM

   53 asignacion1: sexp

   54 @16: /* empty */

   55 condicion: SI LPA sexp RPA LBR @16 bloque RBR condicion1

   56 @17: /* empty */

   57 condicion1: SINO @17 LBR bloque RBR
   58           | /* empty */

   59 escritura: IMPRIME LPA escritura1 RPA SEM

   60 escritura1: exp escritura2

   61 escritura2: DOT escritura1
   62           | /* empty */

   63 ciclos: mientras
   64       | haz
   65       | por

   66 sexp: exp expresion1

   67 expresion1: operadores exp
   68           | /* empty */

   69 operadores: LT
   70           | GT
   71           | DIF
   72           | LTE
   73           | GTE
   74           | DEQ
   75           | EQU

   76 @18: /* empty */

   77 exp: termino @18 exp1

   78 @19: /* empty */

   79 exp1: SUM @19 exp

   80 @20: /* empty */

   81 exp1: MIN @20 exp
   82     | /* empty */

   83 @21: /* empty */

   84 termino: factor @21 termino1

   85 @22: /* empty */

   86 termino1: PRO @22 termino

   87 @23: /* empty */

   88 termino1: DIV @23 termino
   89         | /* empty */

   90 @24: /* empty */

   91 factor: LPA @24 sexp RPA
   92       | var_cte

   93 var_cte: cte_bool
   94        | CTE_NUM
   95        | CTE_TEXTO

   96 @25: /* empty */

   97 var_cte: ID @25 llamada_opt

   98 llamada_opt: llamada
   99            | /* empty */

  100 cte_bool: VERDADERO
  101         | FALSO

  102 dibuja: triangulo
  103       | rectangulo
  104       | elipse
  105       | linea

  106 por: POR LPA sexp DOU sexp RPA LBR bloque RBR

  107 @26: /* empty */

  108 @27: /* empty */

  109 haz: HAZ @26 LBR bloque RBR MIENTRAS LPA sexp RPA @27 SEM

  110 @28: /* empty */

  111 @29: /* empty */

  112 mientras: MIENTRAS @28 LPA sexp RPA @29 LBR bloque RBR

  113 rectangulo: RECTANGULO LPA CTE_NUM RPA SEM

  114 elipse: ELIPSE LPA CTE_NUM RPA SEM

  115 linea: LINEA LPA CTE_NUM COM CTE_NUM RPA SEM

  116 triangulo: TRIANGULO LPA CTE_TEXTO COM CTE_NUM RPA SEM


Terminals, with rules where they appear

$end (0) 0
error (256)
PROGRAMA (258) 4
IMPRIME (259) 59
DIBUJA (260)
FUNCION (261) 39
REGRESA (262) 41
VAR (263) 6
BOOL (264) 15
NUM (265) 13
TEXTO (266) 14
LIBRE (267) 16
SI (268) 55
SINO (269) 57
HAZ (270) 109
POR (271) 106
MIENTRAS (272) 109 112
LINEA (273) 115
RECTANGULO (274) 113
TRIANGULO (275) 116
ELIPSE (276) 114
VERDADERO (277) 100
FALSO (278) 101
CTE_NUM (279) 10 33 49 94 113 114 115 116
CTE_TEXTO (280) 95 116
ID (281) 4 9 25 39 47 97
SUM (282) 79
MIN (283) 81
PRO (284) 86
DIV (285) 88
EQU (286) 52 75
LT (287) 69
GT (288) 70
LTE (289) 72
GTE (290) 73
DIF (291) 71
LPA (292) 29 39 55 59 91 106 109 112 113 114 115 116
RPA (293) 29 39 55 59 91 106 109 112 113 114 115 116
LBR (294) 4 39 55 57 106 109 112
RBR (295) 4 39 55 57 106 109 112
LSQ (296) 10 33 49
RSQ (297) 10 33 49
SEM (298) 6 27 41 52 59 109 113 114 115 116
DOU (299) 106
COM (300) 11 32 48 115 116
DOT (301) 61
DEQ (302) 74


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
program (49)
    on left: 4, on right: 0
@1 (50)
    on left: 1, on right: 4
@2 (51)
    on left: 2, on right: 4
@3 (52)
    on left: 3, on right: 4
vars (53)
    on left: 6 7, on right: 4 6 39
@4 (54)
    on left: 5, on right: 6
vars2 (55)
    on left: 9, on right: 6 11
@5 (56)
    on left: 8, on right: 9
vars3 (57)
    on left: 10 11 12, on right: 9 10
tipo (58)
    on left: 13 14 15 16, on right: 6 39 47
bloque (59)
    on left: 17 18 19 20, on right: 4 17 18 19 39 55 57 106 109 112
estatutos (60)
    on left: 21 22 23, on right: 17
asig_llamada (61)
    on left: 25, on right: 22
@6 (62)
    on left: 24, on right: 25
llamada_ (63)
    on left: 26 27, on right: 25
llamada (64)
    on left: 29, on right: 27 98
@7 (65)
    on left: 28, on right: 29
varsss (66)
    on left: 31, on right: 29 32
@8 (67)
    on left: 30, on right: 31
varsss2 (68)
    on left: 32 33 34, on right: 31 33
funciones (69)
    on left: 39 40, on right: 4 39
@9 (70)
    on left: 35, on right: 39
@10 (71)
    on left: 36, on right: 39
@11 (72)
    on left: 37, on right: 39
@12 (73)
    on left: 38, on right: 39
funciones1 (74)
    on left: 41 42, on right: 39
varss (75)
    on left: 43 44, on right: 39
varss2 (76)
    on left: 47, on right: 43 48
@13 (77)
    on left: 45, on right: 47
@14 (78)
    on left: 46, on right: 47
varss3 (79)
    on left: 48 49 50, on right: 47 49
asignacion (80)
    on left: 52, on right: 26
@15 (81)
    on left: 51, on right: 52
asignacion1 (82)
    on left: 53, on right: 52
condicion (83)
    on left: 55, on right: 21
@16 (84)
    on left: 54, on right: 55
condicion1 (85)
    on left: 57 58, on right: 55
@17 (86)
    on left: 56, on right: 57
escritura (87)
    on left: 59, on right: 23
escritura1 (88)
    on left: 60, on right: 59 61
escritura2 (89)
    on left: 61 62, on right: 60
ciclos (90)
    on left: 63 64 65, on right: 18
sexp (91)
    on left: 66, on right: 31 41 53 55 91 106 109 112
expresion1 (92)
    on left: 67 68, on right: 66
operadores (93)
    on left: 69 70 71 72 73 74 75, on right: 67
exp (94)
    on left: 77, on right: 60 66 67 79 81
@18 (95)
    on left: 76, on right: 77
exp1 (96)
    on left: 79 81 82, on right: 77
@19 (97)
    on left: 78, on right: 79
@20 (98)
    on left: 80, on right: 81
termino (99)
    on left: 84, on right: 77 86 88
@21 (100)
    on left: 83, on right: 84
termino1 (101)
    on left: 86 88 89, on right: 84
@22 (102)
    on left: 85, on right: 86
@23 (103)
    on left: 87, on right: 88
factor (104)
    on left: 91 92, on right: 84
@24 (105)
    on left: 90, on right: 91
var_cte (106)
    on left: 93 94 95 97, on right: 92
@25 (107)
    on left: 96, on right: 97
llamada_opt (108)
    on left: 98 99, on right: 97
cte_bool (109)
    on left: 100 101, on right: 93
dibuja (110)
    on left: 102 103 104 105, on right: 19
por (111)
    on left: 106, on right: 65
haz (112)
    on left: 109, on right: 64
@26 (113)
    on left: 107, on right: 109
@27 (114)
    on left: 108, on right: 109
mientras (115)
    on left: 112, on right: 63
@28 (116)
    on left: 110, on right: 112
@29 (117)
    on left: 111, on right: 112
rectangulo (118)
    on left: 113, on right: 103
elipse (119)
    on left: 114, on right: 104
linea (120)
    on left: 115, on right: 105
triangulo (121)
    on left: 116, on right: 102


state 0

    0 $accept: . program $end
    4 program: . PROGRAMA ID @1 LBR vars funciones @2 @3 bloque RBR

    PROGRAMA  shift, and go to state 1

    program  go to state 2


state 1

    4 program: PROGRAMA . ID @1 LBR vars funciones @2 @3 bloque RBR

    ID  shift, and go to state 3


state 2

    0 $accept: program . $end

    $end  shift, and go to state 4


state 3

    1 @1: .
    4 program: PROGRAMA ID . @1 LBR vars funciones @2 @3 bloque RBR

    $default  reduce using rule 1 (@1)

    @1  go to state 5


state 4

    0 $accept: program $end .

    $default  accept


state 5

    4 program: PROGRAMA ID @1 . LBR vars funciones @2 @3 bloque RBR

    LBR  shift, and go to state 6


state 6

    4 program: PROGRAMA ID @1 LBR . vars funciones @2 @3 bloque RBR
    6 vars: . VAR vars2 tipo @4 SEM vars
    7     | .  [IMPRIME, BOOL, NUM, TEXTO, LIBRE, SI, HAZ, POR, MIENTRAS, LINEA, RECTANGULO, TRIANGULO, ELIPSE, ID, RBR]

    VAR  shift, and go to state 7

    $default  reduce using rule 7 (vars)

    vars  go to state 8


state 7

    6 vars: VAR . vars2 tipo @4 SEM vars
    9 vars2: . ID @5 vars3

    ID  shift, and go to state 9

    vars2  go to state 10


state 8

    4 program: PROGRAMA ID @1 LBR vars . funciones @2 @3 bloque RBR
   13 tipo: . NUM
   14     | . TEXTO
   15     | . BOOL
   16     | . LIBRE
   39 funciones: . tipo @9 FUNCION ID @10 LPA @11 varss RPA LBR vars bloque funciones1 RBR @12 funciones
   40          | .  [IMPRIME, SI, HAZ, POR, MIENTRAS, LINEA, RECTANGULO, TRIANGULO, ELIPSE, ID, RBR]

    BOOL   shift, and go to state 11
    NUM    shift, and go to state 12
    TEXTO  shift, and go to state 13
    LIBRE  shift, and go to state 14

    $default  reduce using rule 40 (funciones)

    tipo       go to state 15
    funciones  go to state 16


state 9

    8 @5: .
    9 vars2: ID . @5 vars3

    $default  reduce using rule 8 (@5)

    @5  go to state 17


state 10

    6 vars: VAR vars2 . tipo @4 SEM vars
   13 tipo: . NUM
   14     | . TEXTO
   15     | . BOOL
   16     | . LIBRE

    BOOL   shift, and go to state 11
    NUM    shift, and go to state 12
    TEXTO  shift, and go to state 13
    LIBRE  shift, and go to state 14

    tipo  go to state 18


state 11

   15 tipo: BOOL .

    $default  reduce using rule 15 (tipo)


state 12

   13 tipo: NUM .

    $default  reduce using rule 13 (tipo)


state 13

   14 tipo: TEXTO .

    $default  reduce using rule 14 (tipo)


state 14

   16 tipo: LIBRE .

    $default  reduce using rule 16 (tipo)


state 15

   35 @9: .
   39 funciones: tipo . @9 FUNCION ID @10 LPA @11 varss RPA LBR vars bloque funciones1 RBR @12 funciones

    $default  reduce using rule 35 (@9)

    @9  go to state 19


state 16

    2 @2: .
    4 program: PROGRAMA ID @1 LBR vars funciones . @2 @3 bloque RBR

    $default  reduce using rule 2 (@2)

    @2  go to state 20


state 17

    9 vars2: ID @5 . vars3
   10 vars3: . LSQ CTE_NUM RSQ vars3
   11      | . COM vars2
   12      | .  [BOOL, NUM, TEXTO, LIBRE]

    LSQ  shift, and go to state 21
    COM  shift, and go to state 22

    $default  reduce using rule 12 (vars3)

    vars3  go to state 23


state 18

    5 @4: .
    6 vars: VAR vars2 tipo . @4 SEM vars

    $default  reduce using rule 5 (@4)

    @4  go to state 24


state 19

   39 funciones: tipo @9 . FUNCION ID @10 LPA @11 varss RPA LBR vars bloque funciones1 RBR @12 funciones

    FUNCION  shift, and go to state 25


state 20

    3 @3: .
    4 program: PROGRAMA ID @1 LBR vars funciones @2 . @3 bloque RBR

    $default  reduce using rule 3 (@3)

    @3  go to state 26


state 21

   10 vars3: LSQ . CTE_NUM RSQ vars3

    CTE_NUM  shift, and go to state 27


state 22

    9 vars2: . ID @5 vars3
   11 vars3: COM . vars2

    ID  shift, and go to state 9

    vars2  go to state 28


state 23

    9 vars2: ID @5 vars3 .

    $default  reduce using rule 9 (vars2)


state 24

    6 vars: VAR vars2 tipo @4 . SEM vars

    SEM  shift, and go to state 29


state 25

   39 funciones: tipo @9 FUNCION . ID @10 LPA @11 varss RPA LBR vars bloque funciones1 RBR @12 funciones

    ID  shift, and go to state 30


state 26

    4 program: PROGRAMA ID @1 LBR vars funciones @2 @3 . bloque RBR
   17 bloque: . estatutos bloque
   18       | . ciclos bloque
   19       | . dibuja bloque
   20       | .  [RBR]
   21 estatutos: . condicion
   22          | . asig_llamada
   23          | . escritura
   25 asig_llamada: . ID @6 llamada_
   55 condicion: . SI LPA sexp RPA LBR @16 bloque RBR condicion1
   59 escritura: . IMPRIME LPA escritura1 RPA SEM
   63 ciclos: . mientras
   64       | . haz
   65       | . por
  102 dibuja: . triangulo
  103       | . rectangulo
  104       | . elipse
  105       | . linea
  106 por: . POR LPA sexp DOU sexp RPA LBR bloque RBR
  109 haz: . HAZ @26 LBR bloque RBR MIENTRAS LPA sexp RPA @27 SEM
  112 mientras: . MIENTRAS @28 LPA sexp RPA @29 LBR bloque RBR
  113 rectangulo: . RECTANGULO LPA CTE_NUM RPA SEM
  114 elipse: . ELIPSE LPA CTE_NUM RPA SEM
  115 linea: . LINEA LPA CTE_NUM COM CTE_NUM RPA SEM
  116 triangulo: . TRIANGULO LPA CTE_TEXTO COM CTE_NUM RPA SEM

    IMPRIME     shift, and go to state 31
    SI          shift, and go to state 32
    HAZ         shift, and go to state 33
    POR         shift, and go to state 34
    MIENTRAS    shift, and go to state 35
    LINEA       shift, and go to state 36
    RECTANGULO  shift, and go to state 37
    TRIANGULO   shift, and go to state 38
    ELIPSE      shift, and go to state 39
    ID          shift, and go to state 40

    $default  reduce using rule 20 (bloque)

    bloque        go to state 41
    estatutos     go to state 42
    asig_llamada  go to state 43
    condicion     go to state 44
    escritura     go to state 45
    ciclos        go to state 46
    dibuja        go to state 47
    por           go to state 48
    haz           go to state 49
    mientras      go to state 50
    rectangulo    go to state 51
    elipse        go to state 52
    linea         go to state 53
    triangulo     go to state 54


state 27

   10 vars3: LSQ CTE_NUM . RSQ vars3

    RSQ  shift, and go to state 55


state 28

   11 vars3: COM vars2 .

    $default  reduce using rule 11 (vars3)


state 29

    6 vars: . VAR vars2 tipo @4 SEM vars
    6     | VAR vars2 tipo @4 SEM . vars
    7     | .  [IMPRIME, REGRESA, BOOL, NUM, TEXTO, LIBRE, SI, HAZ, POR, MIENTRAS, LINEA, RECTANGULO, TRIANGULO, ELIPSE, ID, RBR]

    VAR  shift, and go to state 7

    $default  reduce using rule 7 (vars)

    vars  go to state 56


state 30

   36 @10: .
   39 funciones: tipo @9 FUNCION ID . @10 LPA @11 varss RPA LBR vars bloque funciones1 RBR @12 funciones

    $default  reduce using rule 36 (@10)

    @10  go to state 57


state 31

   59 escritura: IMPRIME . LPA escritura1 RPA SEM

    LPA  shift, and go to state 58


state 32

   55 condicion: SI . LPA sexp RPA LBR @16 bloque RBR condicion1

    LPA  shift, and go to state 59


state 33

  107 @26: .
  109 haz: HAZ . @26 LBR bloque RBR MIENTRAS LPA sexp RPA @27 SEM

    $default  reduce using rule 107 (@26)

    @26  go to state 60


state 34

  106 por: POR . LPA sexp DOU sexp RPA LBR bloque RBR

    LPA  shift, and go to state 61


state 35

  110 @28: .
  112 mientras: MIENTRAS . @28 LPA sexp RPA @29 LBR bloque RBR

    $default  reduce using rule 110 (@28)

    @28  go to state 62


state 36

  115 linea: LINEA . LPA CTE_NUM COM CTE_NUM RPA SEM

    LPA  shift, and go to state 63


state 37

  113 rectangulo: RECTANGULO . LPA CTE_NUM RPA SEM

    LPA  shift, and go to state 64


state 38

  116 triangulo: TRIANGULO . LPA CTE_TEXTO COM CTE_NUM RPA SEM

    LPA  shift, and go to state 65


state 39

  114 elipse: ELIPSE . LPA CTE_NUM RPA SEM

    LPA  shift, and go to state 66


state 40

   24 @6: .
   25 asig_llamada: ID . @6 llamada_

    $default  reduce using rule 24 (@6)

    @6  go to state 67


state 41

    4 program: PROGRAMA ID @1 LBR vars funciones @2 @3 bloque . RBR

    RBR  shift, and go to state 68


state 42

   17 bloque: . estatutos bloque
   17       | estatutos . bloque
   18       | . ciclos bloque
   19       | . dibuja bloque
   20       | .  [REGRESA, RBR]
   21 estatutos: . condicion
   22          | . asig_llamada
   23          | . escritura
   25 asig_llamada: . ID @6 llamada_
   55 condicion: . SI LPA sexp RPA LBR @16 bloque RBR condicion1
   59 escritura: . IMPRIME LPA escritura1 RPA SEM
   63 ciclos: . mientras
   64       | . haz
   65       | . por
  102 dibuja: . triangulo
  103       | . rectangulo
  104       | . elipse
  105       | . linea
  106 por: . POR LPA sexp DOU sexp RPA LBR bloque RBR
  109 haz: . HAZ @26 LBR bloque RBR MIENTRAS LPA sexp RPA @27 SEM
  112 mientras: . MIENTRAS @28 LPA sexp RPA @29 LBR bloque RBR
  113 rectangulo: . RECTANGULO LPA CTE_NUM RPA SEM
  114 elipse: . ELIPSE LPA CTE_NUM RPA SEM
  115 linea: . LINEA LPA CTE_NUM COM CTE_NUM RPA SEM
  116 triangulo: . TRIANGULO LPA CTE_TEXTO COM CTE_NUM RPA SEM

    IMPRIME     shift, and go to state 31
    SI          shift, and go to state 32
    HAZ         shift, and go to state 33
    POR         shift, and go to state 34
    MIENTRAS    shift, and go to state 35
    LINEA       shift, and go to state 36
    RECTANGULO  shift, and go to state 37
    TRIANGULO   shift, and go to state 38
    ELIPSE      shift, and go to state 39
    ID          shift, and go to state 40

    $default  reduce using rule 20 (bloque)

    bloque        go to state 69
    estatutos     go to state 42
    asig_llamada  go to state 43
    condicion     go to state 44
    escritura     go to state 45
    ciclos        go to state 46
    dibuja        go to state 47
    por           go to state 48
    haz           go to state 49
    mientras      go to state 50
    rectangulo    go to state 51
    elipse        go to state 52
    linea         go to state 53
    triangulo     go to state 54


state 43

   22 estatutos: asig_llamada .

    $default  reduce using rule 22 (estatutos)


state 44

   21 estatutos: condicion .

    $default  reduce using rule 21 (estatutos)


state 45

   23 estatutos: escritura .

    $default  reduce using rule 23 (estatutos)


state 46

   17 bloque: . estatutos bloque
   18       | . ciclos bloque
   18       | ciclos . bloque
   19       | . dibuja bloque
   20       | .  [REGRESA, RBR]
   21 estatutos: . condicion
   22          | . asig_llamada
   23          | . escritura
   25 asig_llamada: . ID @6 llamada_
   55 condicion: . SI LPA sexp RPA LBR @16 bloque RBR condicion1
   59 escritura: . IMPRIME LPA escritura1 RPA SEM
   63 ciclos: . mientras
   64       | . haz
   65       | . por
  102 dibuja: . triangulo
  103       | . rectangulo
  104       | . elipse
  105       | . linea
  106 por: . POR LPA sexp DOU sexp RPA LBR bloque RBR
  109 haz: . HAZ @26 LBR bloque RBR MIENTRAS LPA sexp RPA @27 SEM
  112 mientras: . MIENTRAS @28 LPA sexp RPA @29 LBR bloque RBR
  113 rectangulo: . RECTANGULO LPA CTE_NUM RPA SEM
  114 elipse: . ELIPSE LPA CTE_NUM RPA SEM
  115 linea: . LINEA LPA CTE_NUM COM CTE_NUM RPA SEM
  116 triangulo: . TRIANGULO LPA CTE_TEXTO COM CTE_NUM RPA SEM

    IMPRIME     shift, and go to state 31
    SI          shift, and go to state 32
    HAZ         shift, and go to state 33
    POR         shift, and go to state 34
    MIENTRAS    shift, and go to state 35
    LINEA       shift, and go to state 36
    RECTANGULO  shift, and go to state 37
    TRIANGULO   shift, and go to state 38
    ELIPSE      shift, and go to state 39
    ID          shift, and go to state 40

    $default  reduce using rule 20 (bloque)

    bloque        go to state 70
    estatutos     go to state 42
    asig_llamada  go to state 43
    condicion     go to state 44
    escritura     go to state 45
    ciclos        go to state 46
    dibuja        go to state 47
    por           go to state 48
    haz           go to state 49
    mientras      go to state 50
    rectangulo    go to state 51
    elipse        go to state 52
    linea         go to state 53
    triangulo     go to state 54


state 47

   17 bloque: . estatutos bloque
   18       | . ciclos bloque
   19       | . dibuja bloque
   19       | dibuja . bloque
   20       | .  [REGRESA, RBR]
   21 estatutos: . condicion
   22          | . asig_llamada
   23          | . escritura
   25 asig_llamada: . ID @6 llamada_
   55 condicion: . SI LPA sexp RPA LBR @16 bloque RBR condicion1
   59 escritura: . IMPRIME LPA escritura1 RPA SEM
   63 ciclos: . mientras
   64       | . haz
   65       | . por
  102 dibuja: . triangulo
  103       | . rectangulo
  104       | . elipse
  105       | . linea
  106 por: . POR LPA sexp DOU sexp RPA LBR bloque RBR
  109 haz: . HAZ @26 LBR bloque RBR MIENTRAS LPA sexp RPA @27 SEM
  112 mientras: . MIENTRAS @28 LPA sexp RPA @29 LBR bloque RBR
  113 rectangulo: . RECTANGULO LPA CTE_NUM RPA SEM
  114 elipse: . ELIPSE LPA CTE_NUM RPA SEM
  115 linea: . LINEA LPA CTE_NUM COM CTE_NUM RPA SEM
  116 triangulo: . TRIANGULO LPA CTE_TEXTO COM CTE_NUM RPA SEM

    IMPRIME     shift, and go to state 31
    SI          shift, and go to state 32
    HAZ         shift, and go to state 33
    POR         shift, and go to state 34
    MIENTRAS    shift, and go to state 35
    LINEA       shift, and go to state 36
    RECTANGULO  shift, and go to state 37
    TRIANGULO   shift, and go to state 38
    ELIPSE      shift, and go to state 39
    ID          shift, and go to state 40

    $default  reduce using rule 20 (bloque)

    bloque        go to state 71
    estatutos     go to state 42
    asig_llamada  go to state 43
    condicion     go to state 44
    escritura     go to state 45
    ciclos        go to state 46
    dibuja        go to state 47
    por           go to state 48
    haz           go to state 49
    mientras      go to state 50
    rectangulo    go to state 51
    elipse        go to state 52
    linea         go to state 53
    triangulo     go to state 54


state 48

   65 ciclos: por .

    $default  reduce using rule 65 (ciclos)


state 49

   64 ciclos: haz .

    $default  reduce using rule 64 (ciclos)


state 50

   63 ciclos: mientras .

    $default  reduce using rule 63 (ciclos)


state 51

  103 dibuja: rectangulo .

    $default  reduce using rule 103 (dibuja)


state 52

  104 dibuja: elipse .

    $default  reduce using rule 104 (dibuja)


state 53

  105 dibuja: linea .

    $default  reduce using rule 105 (dibuja)


state 54

  102 dibuja: triangulo .

    $default  reduce using rule 102 (dibuja)


state 55

   10 vars3: . LSQ CTE_NUM RSQ vars3
   10      | LSQ CTE_NUM RSQ . vars3
   11      | . COM vars2
   12      | .  [BOOL, NUM, TEXTO, LIBRE]

    LSQ  shift, and go to state 21
    COM  shift, and go to state 22

    $default  reduce using rule 12 (vars3)

    vars3  go to state 72


state 56

    6 vars: VAR vars2 tipo @4 SEM vars .

    $default  reduce using rule 6 (vars)


state 57

   39 funciones: tipo @9 FUNCION ID @10 . LPA @11 varss RPA LBR vars bloque funciones1 RBR @12 funciones

    LPA  shift, and go to state 73


state 58

   59 escritura: IMPRIME LPA . escritura1 RPA SEM
   60 escritura1: . exp escritura2
   77 exp: . termino @18 exp1
   84 termino: . factor @21 termino1
   91 factor: . LPA @24 sexp RPA
   92       | . var_cte
   93 var_cte: . cte_bool
   94        | . CTE_NUM
   95        | . CTE_TEXTO
   97        | . ID @25 llamada_opt
  100 cte_bool: . VERDADERO
  101         | . FALSO

    VERDADERO  shift, and go to state 74
    FALSO      shift, and go to state 75
    CTE_NUM    shift, and go to state 76
    CTE_TEXTO  shift, and go to state 77
    ID         shift, and go to state 78
    LPA        shift, and go to state 79

    escritura1  go to state 80
    exp         go to state 81
    termino     go to state 82
    factor      go to state 83
    var_cte     go to state 84
    cte_bool    go to state 85


state 59

   55 condicion: SI LPA . sexp RPA LBR @16 bloque RBR condicion1
   66 sexp: . exp expresion1
   77 exp: . termino @18 exp1
   84 termino: . factor @21 termino1
   91 factor: . LPA @24 sexp RPA
   92       | . var_cte
   93 var_cte: . cte_bool
   94        | . CTE_NUM
   95        | . CTE_TEXTO
   97        | . ID @25 llamada_opt
  100 cte_bool: . VERDADERO
  101         | . FALSO

    VERDADERO  shift, and go to state 74
    FALSO      shift, and go to state 75
    CTE_NUM    shift, and go to state 76
    CTE_TEXTO  shift, and go to state 77
    ID         shift, and go to state 78
    LPA        shift, and go to state 79

    sexp      go to state 86
    exp       go to state 87
    termino   go to state 82
    factor    go to state 83
    var_cte   go to state 84
    cte_bool  go to state 85


state 60

  109 haz: HAZ @26 . LBR bloque RBR MIENTRAS LPA sexp RPA @27 SEM

    LBR  shift, and go to state 88


state 61

   66 sexp: . exp expresion1
   77 exp: . termino @18 exp1
   84 termino: . factor @21 termino1
   91 factor: . LPA @24 sexp RPA
   92       | . var_cte
   93 var_cte: . cte_bool
   94        | . CTE_NUM
   95        | . CTE_TEXTO
   97        | . ID @25 llamada_opt
  100 cte_bool: . VERDADERO
  101         | . FALSO
  106 por: POR LPA . sexp DOU sexp RPA LBR bloque RBR

    VERDADERO  shift, and go to state 74
    FALSO      shift, and go to state 75
    CTE_NUM    shift, and go to state 76
    CTE_TEXTO  shift, and go to state 77
    ID         shift, and go to state 78
    LPA        shift, and go to state 79

    sexp      go to state 89
    exp       go to state 87
    termino   go to state 82
    factor    go to state 83
    var_cte   go to state 84
    cte_bool  go to state 85


state 62

  112 mientras: MIENTRAS @28 . LPA sexp RPA @29 LBR bloque RBR

    LPA  shift, and go to state 90


state 63

  115 linea: LINEA LPA . CTE_NUM COM CTE_NUM RPA SEM

    CTE_NUM  shift, and go to state 91


state 64

  113 rectangulo: RECTANGULO LPA . CTE_NUM RPA SEM

    CTE_NUM  shift, and go to state 92


state 65

  116 triangulo: TRIANGULO LPA . CTE_TEXTO COM CTE_NUM RPA SEM

    CTE_TEXTO  shift, and go to state 93


state 66

  114 elipse: ELIPSE LPA . CTE_NUM RPA SEM

    CTE_NUM  shift, and go to state 94


state 67

   25 asig_llamada: ID @6 . llamada_
   26 llamada_: . asignacion
   27         | . llamada SEM
   29 llamada: . LPA @7 varsss RPA
   52 asignacion: . EQU @15 asignacion1 SEM

    EQU  shift, and go to state 95
    LPA  shift, and go to state 96

    llamada_    go to state 97
    llamada     go to state 98
    asignacion  go to state 99


state 68

    4 program: PROGRAMA ID @1 LBR vars funciones @2 @3 bloque RBR .

    $default  reduce using rule 4 (program)


state 69

   17 bloque: estatutos bloque .

    $default  reduce using rule 17 (bloque)


state 70

   18 bloque: ciclos bloque .

    $default  reduce using rule 18 (bloque)


state 71

   19 bloque: dibuja bloque .

    $default  reduce using rule 19 (bloque)


state 72

   10 vars3: LSQ CTE_NUM RSQ vars3 .

    $default  reduce using rule 10 (vars3)


state 73

   37 @11: .
   39 funciones: tipo @9 FUNCION ID @10 LPA . @11 varss RPA LBR vars bloque funciones1 RBR @12 funciones

    $default  reduce using rule 37 (@11)

    @11  go to state 100


state 74

  100 cte_bool: VERDADERO .

    $default  reduce using rule 100 (cte_bool)


state 75

  101 cte_bool: FALSO .

    $default  reduce using rule 101 (cte_bool)


state 76

   94 var_cte: CTE_NUM .

    $default  reduce using rule 94 (var_cte)


state 77

   95 var_cte: CTE_TEXTO .

    $default  reduce using rule 95 (var_cte)


state 78

   96 @25: .
   97 var_cte: ID . @25 llamada_opt

    $default  reduce using rule 96 (@25)

    @25  go to state 101


state 79

   90 @24: .
   91 factor: LPA . @24 sexp RPA

    $default  reduce using rule 90 (@24)

    @24  go to state 102


state 80

   59 escritura: IMPRIME LPA escritura1 . RPA SEM

    RPA  shift, and go to state 103


state 81

   60 escritura1: exp . escritura2
   61 escritura2: . DOT escritura1
   62           | .  [RPA]

    DOT  shift, and go to state 104

    $default  reduce using rule 62 (escritura2)

    escritura2  go to state 105


state 82

   76 @18: .
   77 exp: termino . @18 exp1

    $default  reduce using rule 76 (@18)

    @18  go to state 106


state 83

   83 @21: .
   84 termino: factor . @21 termino1

    $default  reduce using rule 83 (@21)

    @21  go to state 107


state 84

   92 factor: var_cte .

    $default  reduce using rule 92 (factor)


state 85

   93 var_cte: cte_bool .

    $default  reduce using rule 93 (var_cte)


state 86

   55 condicion: SI LPA sexp . RPA LBR @16 bloque RBR condicion1

    RPA  shift, and go to state 108


state 87

   66 sexp: exp . expresion1
   67 expresion1: . operadores exp
   68           | .  [RPA, LSQ, SEM, DOU, COM]
   69 operadores: . LT
   70           | . GT
   71           | . DIF
   72           | . LTE
   73           | . GTE
   74           | . DEQ
   75           | . EQU

    EQU  shift, and go to state 109
    LT   shift, and go to state 110
    GT   shift, and go to state 111
    LTE  shift, and go to state 112
    GTE  shift, and go to state 113
    DIF  shift, and go to state 114
    DEQ  shift, and go to state 115

    $default  reduce using rule 68 (expresion1)

    expresion1  go to state 116
    operadores  go to state 117


state 88

   17 bloque: . estatutos bloque
   18       | . ciclos bloque
   19       | . dibuja bloque
   20       | .  [RBR]
   21 estatutos: . condicion
   22          | . asig_llamada
   23          | . escritura
   25 asig_llamada: . ID @6 llamada_
   55 condicion: . SI LPA sexp RPA LBR @16 bloque RBR condicion1
   59 escritura: . IMPRIME LPA escritura1 RPA SEM
   63 ciclos: . mientras
   64       | . haz
   65       | . por
  102 dibuja: . triangulo
  103       | . rectangulo
  104       | . elipse
  105       | . linea
  106 por: . POR LPA sexp DOU sexp RPA LBR bloque RBR
  109 haz: . HAZ @26 LBR bloque RBR MIENTRAS LPA sexp RPA @27 SEM
  109    | HAZ @26 LBR . bloque RBR MIENTRAS LPA sexp RPA @27 SEM
  112 mientras: . MIENTRAS @28 LPA sexp RPA @29 LBR bloque RBR
  113 rectangulo: . RECTANGULO LPA CTE_NUM RPA SEM
  114 elipse: . ELIPSE LPA CTE_NUM RPA SEM
  115 linea: . LINEA LPA CTE_NUM COM CTE_NUM RPA SEM
  116 triangulo: . TRIANGULO LPA CTE_TEXTO COM CTE_NUM RPA SEM
